--- a/HW4/HW_4.1/4.4.1_HW.html
+++ b/HW4/HW_4.1/4.4.1_HW.html
@@ -1,15 +1,66 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="4.4.1_HW.css">
 
 </head>
 <body>
+<main class="main d-flex">
+    <header class="header">
+        <h1>НАЙПРОСТІШИЙ РЕЦЕПТ ЯБЛУЧНОГО АРОМАТНОГО ПИРОГА НА КЕФІРІ</h1>
+        <hr>
+    </header>
+    <div class="content d-flex">
+        <div class="section-1 d-flex">
+            <img src="img.png">
+            <div class="ingridients_list">
+                <ul>
+                    <li>2 яйця</li>
+                    <li>200 г цукру</li>
+                    <li>1 ч. л. ванільного цукру</li>
+                    <li>250 мл кефіру</li>
+                    <li>50 г вершкового масла</li>
+                    <li>1 дрібка солі</li>
+                    <li>1 ч. л. розпушувача</li>
+                    <li>2-3 яблука твердих сортів</li>
+                    <li>1 ч. л. меленої кориці</li>
+                    <li>1 ст. л. цукрової пудри</li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <div class="section_2">
+        <ol>
+            <li>Духовку треба розігріти до 180 градусів. Змішайте в мисці 2 яйця й 200 г цукру. Використовуйте ємність
+                достатнього розміру, щоб у ній помістилося все тісто. Якщо у вас є кухонна машина, можете замісити тісто
+                в ній.
+            </li>
+            <li>Додайте дрібку солі та 1 ч. л. ванільного цукру. Ретельно збийте суміш віничком.</li>
+            <li>Додайте 50 г м'якого вершкового масла та перемішайте масу до отримання однорідної консистенції.</li>
+            <li>Влийте в миску 250 мл кефіру. Знову перемішайте віничком до повного об'єднання. Я використовую звичайний
+                магазинний кефір.
+            </li>
+            <li>Додайте до маси 1 ч. л. розпушувача та перемішайте віничком. Часто можна побачити пораду, що розпушувач
+                обов'язково потрібно змішати з борошном, але повірте мені, тут це не має ніякого значення.
+            </li>
+            <li>Просійте 250 г борошна через сито та додайте його в миску, постійно перемішуючи суміш віничком.</li>
+            <li>Добре перемішайте масу до однорідного стану. Готове тісто повинно вийти досить густим, як дуже густа
+                сметана.
+            </li>
+            <li>Влийте все тісто в форму для випікання, щоб воно рівномірно розподілилося по ній.</li>
+            <li>У разі потреби акуратно розрівняйте тісто в формі за допомогою столової ложки</li>
+            <li>На тісто викладіть часточки яблук віялом так, щоб вони зайняли всю площу пирога.</li>
+        </ol>
+    </div>
+</main>
 
 </body>
 </html>
