--- a/HW4/HW_4.2/4.2_HW.html
+++ b/HW4/HW_4.2/4.2_HW.html
@@ -6,11 +6,34 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link rel="stylesheet" href="normalize.css">
-    <link rel="stylesheet" href="">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="4.2_style.css">
 
 </head>
 <body>
+<main class="main d-flex display-center">
+    <div class="container d-flex display-center">
+        <header>
+            <h1 class="header d-flex display-center" >Вхід в особистий кабінет</h1>
+        </header>
+        <div class="user_login d-flex display-center">
+            <input type="text" id="login" placeholder="Логін aбо  e-mail" required>
+        </div>
+        <div class="user_password d-flex display-center">
+            <input type="password" id="password" placeholder="Пароль" required>
+        </div>
+        <div class="footer_button d-flex display-center">
+            <label for="checkbox">Запам'ятай мене</label>
+            <input type="checkbox" id="checkbox" >
+            <button class="button">
+                <input class="btn" type="submit" value="Вхід" id="enter" required>
+            </button>
+        </div>
+    </div>
+<main>
+
 
 </body>
 </html>
