--- a/HW4/Add_HW/add_5_HW.html
+++ b/HW4/Add_HW/add_5_HW.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="5.1_style.css">
+    <link rel="stylesheet" href="add_5_HW.css">
 
 </head>
 <body>
@@ -27,7 +27,7 @@
             <input type="email" id="email" placeholder="Email address" required>
         </div>
         <div class="user_password d-flex display-center">
-            <input type="password" id="password" placeholder="Password (6 or more characters)" min="6" required>
+            <input type="password" id="password" placeholder="Password (6 or more characters)" minlength="6" required>
         </div>
         <div class="worning-text">
             <p>By clicking Join Now, you agree to Linkedin's <span> User Agreement, Privacy Policy </span> and <span> Cookie Policy. </span></p>
