--- a/HW4/HW_4.1/4.1_HW.html
+++ b/HW4/HW_4.1/4.1_HW.html
@@ -26,7 +26,7 @@
                 </div>
                 <br>
                 <div class="user_password">
-                    <input type="password" name="password" id="password" placeholder="Пароль" required>
+                    <input type="password" name="password" id="password" placeholder="Пароль"  minlength="6" maxlength="12" required>
                 </div>
                 <div class="enter">
                     <input type="submit" name="enter" value="Увійти" id="enter" placeholder="" required>
@@ -46,7 +46,7 @@
             </div>
         </section>
         <section class="footer d-flex">
-            <p>Не маєте облікового запису? <a href="https://www.instagram.com/accounts/emailsignup/">Зареєструйтеся</a>
+            <p>Не маєте облікового запису? <a href="https://www.instagram.com/accounts/emailsignup/"><span>Зареєструйтесь</span></a>
             </p>
         </section>
     </div>
