--- a/HW4/Add_HW/add_7_HW.html
+++ b/HW4/Add_HW/add_7_HW.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="7.1_style.css">
+    <link rel="stylesheet" href="add_7_HW.css">
 
 </head>
 <body>
