--- a/HW4/Add_HW/add_8.2._figma.html
+++ b/HW4/Add_HW/add_8.2._figma.html
@@ -6,7 +6,7 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link rel="stylesheet" href="8.1_figma.css">
+    <link rel="stylesheet" href="add_8.1_figma.css">
 
 </head>
 <body>
