--- a/Sum_Project/Project_HW.html
+++ b/Sum_Project/Project_HW.html
@@ -43,6 +43,7 @@
             <p>Powering tools and integrations from companies all around the world</p>
         </div>
     </div>
+    <!--/#hero_content -->
 
     <div class="client d-flex justify-content-center align-items-center">
         <div class="image_logos d-flex justify-content-center">
@@ -55,27 +56,96 @@
             <a href="#"><img src="img/magic.png" alt="magic"></a>
         </div>
     </div>
-    <div class="community">
-        <h3 class="section-title text-center text-uppercase">Upcoming courses</h3>
-        <div class="row d-flex flex-wrap">
+    <!--/#client -->
+
+    <div class="community d-flex flex-column justify-content-center align-items-center">
+        <div class="community_top d-flex">
+            <div class="community_p">
+                <p>Join a community<br>of millions</p>
+            </div>
+            <div class="community_number text-uppercase">
+                <p class="number_1">11.5M+</p>
+                <p class="text_below_p">Active accounts</p>
+                <p class="number_2">21.9M</p>
+                <p class="text_below_p">NFTs minted</p>
+                <p class="number_3">$0.00025</p>
+                <p class="text_below_p">Average cost per transaction</p>
+            </div>
+        </div>
+        <!--/#community_top -->
+
+        <div class="community_bottom d-flex">
+            <div class="community_column_1">
+                <p class="community_p">Made for<br>mass adoption</p>
+                <p class="text_below0 text-uppercase">Live data</p>
+            </div>
+            <div class="column_2 d-flex flex-column">
+                <div class="column_2_top">
+                    <p class="community_header">Fast</p>
+                    <p class="text_below">Don’t keep your users waiting.<br> Solana has block times of 400<br>
+                        milliseconds — and as hardware<br> gets faster, so will the network.</p>
+                    <p class="community_header2">3,969</p>
+                    <p class="text_below1 text-uppercase">Transactions per second</p>
+                </div>
+                <div class="column_2_bottom">
+                    <p class="community_header">Scalable</p>
+                    <p class="text_below">Get big, quick. Solana is made<br> to handle thousands of<br> transactions
+                        per second, and<br> fees for both developers and<br> users remain less than $0.01.</p>
+                    <p class="community_header2">163,077,581,394</p>
+                    <p class="text_below1 text-uppercase">Total transactions</p>
+                </div>
+            </div>
+            <div class="column_3 d-flex flex-column">
+                <div class="column_3_top">
+                    <p class="community_header3">Decentralized</p>
+                    <p class="text_below">The Solana network is validated<br> by thousands of nodes that<br> operate
+                        independently of each<br> other, ensuring your data remains<br> secure and censorship resistant.
+                    </p>
+                    <p class="community_header3">1,675</p>
+                    <p class="text_below1 text-uppercase">Validator nodes</p>
+                </div>
+                <div class="column_2_bottom">
+                    <p class="community_header">Energy Efficient</p>
+                    <p class="text_below">Solana’s proof of stake network<br> and other innovations minimize<br> its
+                        impact on the <span><a href="#">environment.</a></span><br> Each Solana transaction uses<br>
+                        about the same energy as a few<br> Google searches.</p>
+                    <p class="community_header2">163,077,581,394</p>
+                    <p class="text_below1 text-uppercase">Total transactions</p>
+                    <p class="community_header3">0%</p>
+                    <p class="text_below1 text-uppercase">Net carbon impact</p>
+                </div>
+            </div>
+        </div>
+
+
+    </div>
+    <div class="build d-flex flex-column justify-content-center align-items-center">
+        <div class="build_container d-flex justify-content-center align-items-center">
+            <div class="build_nav_img">
+                <div class="build_header">
+                    <p>Build for growth.</p>
+                </div>
+                <nav class="build-nav">
+                    <a href="#">NFTs</a>
+                    <a href="#">DeFi</a>
+                    <a href="#">Payments</a>
+                    <a href="#">Gaming</a>
+                    <a href="#">DAOs</a>
+                </nav>
+            </div>
+            <div class="community_p">
+
+            </div>
+            <div class="community_number text-uppercase">
+
+            </div>
 
         </div>
     </div>
-
-    <div class="build">
-        <h3 class="section-title text-center text-uppercase">Upcoming courses</h3>
-        <div class="row d-flex flex-wrap">
-
-        </div>
     </div>
 
     <footer class="container">
-        <h3 class="section-title text-center text-uppercase">Why choose an IT career?</h3>
-        <p class="about-us-text">Because it promises security, stability, and growth in an
-            ever-changing, complex world. Learning that the sector welcomes diversity and promotes flexibility
-            should also urge you to consider this career path. And if you want constant challenges in your daily
-            tasks, then this may just be right up your alley. </p>
-        <a href="#" class="btn btn-default">Details</a>
+
     </footer>
 </main>
 </body>
