--- a/Sum_Project/Project_HW.html
+++ b/Sum_Project/Project_HW.html
@@ -120,33 +120,87 @@
 
     </div>
     <div class="build d-flex flex-column justify-content-center align-items-center">
-        <div class="build_container d-flex justify-content-center align-items-center">
-            <div class="build_nav_img">
-                <div class="build_header">
+        <div class="build_container d-flex justify-content-centerv align-items-center flex-column">
+            <div class="build_nav_img d-flex flex-column">
+                <div class="build_header d-flex justify-content-between align-items-center">
                     <p>Build for growth.</p>
-                </div>
-                <nav class="build-nav">
                     <a href="#">NFTs</a>
                     <a href="#">DeFi</a>
                     <a href="#">Payments</a>
                     <a href="#">Gaming</a>
-                    <a href="#">DAOs</a>
-                </nav>
+                    <a class="last_a" href="#">DAOs</a>
+                </div>
+                <div class="img_container d-flex align-items-center">
+                    <div class="img_left">
+                        <img src="img/man.png" alt="man">
+                    </div>
+                    <div class="img_right d-flex flex-column justify-content-center">
+                        <img src="img/anybodies.png" alt="anybodies_logo">
+                        <p>It’s time to bridge the digital and physical.<br> Anybodies helps established brands like<br>
+                            Toys’R’Us connect real-life places and<br> products with NFTs.</p>
+                        <p><a href="#">Learn more NFTs on Solana</a></p>
+                    </div>
+                </div>
+                <div class="img_footer_logo d-flex align-items-center justify-content-center">
+                    <img src="img/clay.png" alt="logo_clay">
+                    <img src="img/monkey.png" alt="logo_monkey">
+                    <img src="img/fox.png" alt="logo_fox">
+                    <img src="img/okay.png" alt="logo_okay">
+                </div>
+                <p class="community_header">Join a thriving community.</p>
             </div>
-            <div class="community_p">
 
+            <!--/#build -->
+
+            <div class="community_footer d-flex justify-content-between">
+                <div class="community_column1 d-flex flex-column">
+                    <div class="community_column1_top d-flex flex-column justify-content-center align-items-center">
+                        <p class="community_column1_number">11,000</p>
+                        <p class="text_below_upper text-uppercase">Solana Hacker House participants</p>
+                    </div>
+                    <div class="community_column1_bottom">
+                        <img src="img/man_woman.png" alt="man_woman">
+                    </div>
+                </div>
+                <div class="community_column2">
+                    <img src="img/croud.png">
+                </div>
+                <div class="community_column3">
+                    <div class="community_column3_top">
+                        <img src="img/pc.png" alt="pc">
+                    </div>
+                    <div class="community_column3_bottom d-flex flex-column justify-content-center align-items-center">
+                        <p class="community_column3_number">48,000</p>
+                        <p class="text_below_down text-uppercase text-center">Developers building during <br> Solana Hackathons</p>
+                    </div>
+                </div>
+                <div class="community_column4">
+                    <img src="img/girl.png" alt="girl">
+                </div>
+                <div class="community_column5">
+                    <div class="community_column5_top d-flex flex-column justify-content-center align-items-center">
+                        <p class="community_column5_number">3,800</p>
+                        <p class="text_below_upper text-uppercase text-center">Solana Breakpoint 2022 attendees</p>
+                    </div>
+                    <div class="community_column5_bottom">
+                        <img src="img/laptop.png" alt="laptop">
+                    </div>
+                </div>
             </div>
-            <div class="community_number text-uppercase">
-
+            <div class="community_qoute text-center">
+                <p class="community_qoute_p">It's time to join the thousands of creators, <br> artists, and developers using Solana.</p>
+                <a href="#" class="btn_left d-flex justify-content-center text-uppercase">start biulding</a>
             </div>
+            <!--/#community -->
 
+            <footer class="frame_container_footer">
+
+            </footer>
         </div>
     </div>
     </div>
 
-    <footer class="container">
 
-    </footer>
 </main>
 </body>
 </html>
