hw_project_finish

--- a/Sum_Project/Project_HW.html
+++ b/Sum_Project/Project_HW.html
@@ -193,9 +193,41 @@
             </div>
             <!--/#community -->
 
-            <footer class="frame_container_footer">
-
+            <footer class="frame_footer d-flex">
+                <div class="footer_column1">
+                    <img src="img/Frame.png" alt="frame">
+                    <p class="footer_column1_header">Managed by Solana Foundation</p>
+                    <div class="footer_column1_logo">
+                        <a href="#"><img src="img/youtube.png" alt="youtube_logo"></a>
+                        <a href="#"><img src="img/twitter.png" alt="twitter_logo"></a>
+                        <a href="#"> <img src="img/mask.png" alt="mask_logo"></a>
+                        <a href="#"><img src="img/head.png" alt="head_logo"></a>
+                        <a href="#"><img src="img/git.png" alt="git_logo"></a>
+                        <a href="#"><img src="img/telegram.png" alt="telegram_logo"></a>
+                    </div>
+                    <p class="footer_column1_bottom">© 2023 Solana Foundation. All rights reserved.</p>
+                </div>
+                <div class="footer_column2"></div>
+                <div class="footer_column3 d-flex flex-column">
+                    <p class="footer_column3_header">Solana</p>
+                    <a href="#" alt="Grants"><p>Grants</p></a>
+                    <a href="#" alt="Break Solana"><p>Break Solana</p></a>
+                    <a href="#" alt="Media Kit"><p>Media Kit</p></a>
+                    <a href="#" alt="Careers"><p>Careers</p></a>
+                    <a href="#" alt="Disclaimer"><p>Disclaimer</p></a>
+                </div>
+                <div class="footer_column4 d-flex flex-column">
+                    <p class="footer_column4_header">Get Connected</p>
+                    <a href="#" alt="Grants"><p>Ecosystem</p></a>
+                    <a href="#" alt="Break Solana"><p>Blog</p></a>
+                    <a href="#" alt="Media Kit"><p>Newsletter</p></a>
+                </div>
+                <div class="footer_column5 d-flex">
+                    <img src="img/world.png" alt="world">
+                    <a href="#" alt="EN"><p>EN</p></a>
+                </div>
             </footer>
+            <!--/#footer -->
         </div>
     </div>
     </div>
