hw_project_finish

--- a/Sum_Project/Project_HW.html
+++ b/Sum_Project/Project_HW.html
@@ -8,7 +8,7 @@
 <body>
 <main>
     <header class="header  d-flex flex-column">
-        <div class="header-content text-center align-items-center text-uppercase">.
+        <div class="header-content d-flex justify-content-center align-items-center text-uppercase">
             <p>Breakpoint 2023 - New City. New Vibes - <a href="#">Get Early Access -></a></p>
         </div>
         <div class="container_nav d-flex justify-content-between align-items-center">
@@ -46,7 +46,7 @@
     <!--/#hero_content -->
 
     <div class="client d-flex justify-content-center align-items-center">
-        <div class="image_logos d-flex justify-content-center">
+        <div class="image_logos d-flex justify-content-center align-items-center">
             <a href="#"><img src="img/brave.png" alt="brave"></a>
             <a href="#"><img src="img/circle.png" alt="circle"></a>
             <a href="#"><img src="img/discover.png" alt="discover"></a>
@@ -152,7 +152,7 @@
 
             <!--/#build -->
 
-            <div class="community_footer d-flex justify-content-between">
+            <div class="community_footer d-flex justify-content-center">
                 <div class="community_column1 d-flex flex-column">
                     <div class="community_column1_top d-flex flex-column justify-content-center align-items-center">
                         <p class="community_column1_number">11,000</p>
@@ -171,7 +171,8 @@
                     </div>
                     <div class="community_column3_bottom d-flex flex-column justify-content-center align-items-center">
                         <p class="community_column3_number">48,000</p>
-                        <p class="text_below_down text-uppercase text-center">Developers building during <br> Solana Hackathons</p>
+                        <p class="text_below_down text-uppercase text-center">Developers building during <br> Solana
+                            Hackathons</p>
                     </div>
                 </div>
                 <div class="community_column4">
@@ -188,7 +189,8 @@
                 </div>
             </div>
             <div class="community_qoute text-center">
-                <p class="community_qoute_p">It's time to join the thousands of creators, <br> artists, and developers using Solana.</p>
+                <p class="community_qoute_p">It's time to join the thousands of creators, <br> artists, and developers
+                    using Solana.</p>
                 <a href="#" class="btn_left d-flex justify-content-center text-uppercase">start biulding</a>
             </div>
             <!--/#community -->
@@ -210,17 +212,17 @@
                 <div class="footer_column2"></div>
                 <div class="footer_column3 d-flex flex-column">
                     <p class="footer_column3_header">Solana</p>
-                    <a href="#" alt="Grants"><p>Grants</p></a>
-                    <a href="#" alt="Break Solana"><p>Break Solana</p></a>
-                    <a href="#" alt="Media Kit"><p>Media Kit</p></a>
-                    <a href="#" alt="Careers"><p>Careers</p></a>
-                    <a href="#" alt="Disclaimer"><p>Disclaimer</p></a>
+                    <a href="#"><p>Grants</p></a>
+                    <a href="#"><p>Break Solana</p></a>
+                    <a href="#"><p>Media Kit</p></a>
+                    <a href="#"><p>Careers</p></a>
+                    <a href="#"><p>Disclaimer</p></a>
                 </div>
                 <div class="footer_column4 d-flex flex-column">
                     <p class="footer_column4_header">Get Connected</p>
-                    <a href="#" alt="Grants"><p>Ecosystem</p></a>
-                    <a href="#" alt="Break Solana"><p>Blog</p></a>
-                    <a href="#" alt="Media Kit"><p>Newsletter</p></a>
+                    <a href="#"><p>Ecosystem</p></a>
+                    <a href="#"><p>Blog</p></a>
+                    <a href="#"><p>Newsletter</p></a>
                 </div>
                 <div class="footer_column5 d-flex">
                     <img src="img/world.png" alt="world">
@@ -230,8 +232,6 @@
             <!--/#footer -->
         </div>
     </div>
-    </div>
-
 
 </main>
 </body>
