hw_project_finish

--- a/Sum_Project/Project_HW.html
+++ b/Sum_Project/Project_HW.html
@@ -163,7 +163,7 @@
                     </div>
                 </div>
                 <div class="community_column2">
-                    <img src="img/croud.png">
+                    <img src="img/croud.png" alt="croud">
                 </div>
                 <div class="community_column3">
                     <div class="community_column3_top">
@@ -226,7 +226,7 @@
                 </div>
                 <div class="footer_column5 d-flex">
                     <img src="img/world.png" alt="world">
-                    <a href="#" alt="EN"><p>EN</p></a>
+                    <a href="#"><p>EN</p></a>
                 </div>
             </footer>
             <!--/#footer -->
